2019-07-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tests/base/GSTLS/basic.m: Use fixed time zone.

2019-07-01  Fred Kiefer <fredkiefer@gmx.de>

	* Source/GSXML.m (fatalErrorFunction): Use correct function to get
	line number.
	* Source/NSOperation.m (_execute): Surround with NS_DURING to free
	lock on error.
2019-06-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSIArray.h:
	* Headers/GNUstepBase/NSObject+GNUstepBase.h:
	* Source/Additions/NSObject+GNUstepBase.m:
	* Source/GSArray.m:
	* Source/GSCountedSet.m:
	* Source/GSDictionary.m:
	* Source/GSSet.m:
	* Source/NSArray.m:
	* Source/NSConcreteHashTable.m:
	* Source/NSConcreteMapTable.m:
	* Source/NSData.m:
	* Source/NSDictionary.m:
	* Source/NSDistantObject.m:
	* Source/NSObject.m:
	* Source/NSProxy.m:
	* Source/NSSet.m:
	* Source/NSString.m:
	Revise mechanism for extention to report memory usage of individual
	objects. This makes the inclusion of size of objects in ivars a
	default, while allowing easy extension to include other heap memory.
	API change not final.

2019-05-23  Frederik Seiffert <frederik@algoriddim.com>

	* configure:
	* configure.ac:
	Link against libandroid on Android.
	* Headers/Foundation/NSBundle.h:
	* Source/NSBundle.m:
	Added methods for passing Android asset manager from Java to GNUstep
	and for getting AAsset/AAssetDir for given path in main bundle.
	Skip app bundle suffix check on Android. Extended bundle resource
	paths backbone to check for known paths directly on Android as we
	can't enumerate directories.
	Extended -localizations method to check for known localizations
	directly (requires setting userLanguages in NSUserDefaults).
	Extracted path cache cleaning into separate method.
	* Source/GSFileHandle.h:
	* Source/GSFileHandle.m:
	Added file handle support for reading Android assets from main bundle.
	* Source/NSData.m:
	Added support for reading Android assets from main bundle in
	readContentsOfFile(). This is also used by all other